# ProgramowanieRownolegle

./: .gitignore  .gitmodules  AK7_CSHARP.sln  BFGSolver.cpp  BFGSolver.h  CMakeLists.txt  CMakeSettings.json  ExtendedRosenbrockFunction.h  IFunction.cpp  IFunction.h  LBFGSExampleRosenbrock.cpp  LBFGSExampleRosenbrock.h  PowellSingularFunction.cpp  PowellSingularFunction.h  PowerSingularFunction.cpp  PowerSingularFunction.h  QuadraticFunction.h  README.md  TestUtil.h  config.h  main.cpp  matrix.cpp  matrix.h  vector.h
AK7_CSHARP/: AK7_CSHARP.csproj  BFGSolver.cs  Program.cs  TestUtil.cs
AK7_CSHARP/Algebra/: DMath.cs  Matrix.cs  Vector.cs
AK7_CSHARP/Functions/: ExtendedRosenbrockFunction.cs  IFunction.cs  PowellSingularFunction.cs  QuadraticFunction.cs
AK7_CSHARP/Properties/: launchSettings.json
libs/: README.md
math/: CMakeLists.txt  helper.h  matrix.cpp  matrix.h  vector.cpp  vector.h
